tests/ui/lazy-type-alias/def-site-predicates-wf.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/def-site-predicates-wf.rs:7:5
   |
LL |     Vec<str>:;
   |     ^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
note: required by an implicit `Sized` bound in `Vec`
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL

error[E0277]: the size for values of type `str` cannot be known at compilation time
  --> $DIR/def-site-predicates-wf.rs:11:15
   |
LL |     Vec<str>: Sized;
   |               ^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `str`
note: required by an implicit `Sized` bound in `Vec`
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
